[gd_scene load_steps=4 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://robotto.tres" type="DynamicFont" id=2]
[ext_resource path="res://Question_font.tres" type="DynamicFont" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 190.0, 845.0 ]
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 598.0
color = Color( 0.105882, 0.0862745, 0.341176, 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 27.0
margin_top = 27.0
margin_right = 63.0
margin_bottom = 60.0

[node name="Question" type="Label" parent="."]
margin_left = 191.0
margin_top = 128.0
margin_right = 845.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 3 )
text = "Question"
valign = 1
autowrap = true

[node name="opt1" type="Button" parent="."]
margin_left = 191.0
margin_top = 326.0
margin_right = 845.0
margin_bottom = 383.0
custom_colors/font_color_hover = Color( 0.0666667, 0.643137, 0.898039, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.823529, 0.0627451, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="opt2" type="Button" parent="."]
margin_left = 191.0
margin_top = 386.0
margin_right = 845.0
margin_bottom = 443.0
custom_colors/font_color_hover = Color( 0.0666667, 0.643137, 0.898039, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.823529, 0.0627451, 1 )
custom_fonts/font = ExtResource( 2 )

[node name="opt3" type="Button" parent="."]
margin_left = 191.0
margin_top = 446.0
margin_right = 845.0
margin_bottom = 503.0
custom_colors/font_color_hover = Color( 0.0666667, 0.643137, 0.898039, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.823529, 0.0627451, 1 )
custom_fonts/font = ExtResource( 2 )

[node name="opt4" type="Button" parent="."]
margin_left = 191.0
margin_top = 506.0
margin_right = 845.0
margin_bottom = 563.0
custom_colors/font_color_hover = Color( 0.0666667, 0.643137, 0.898039, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.823529, 0.0627451, 1 )
custom_fonts/font = ExtResource( 2 )

[node name="DisplayScore" type="Label" parent="."]
margin_left = 640.0
margin_top = 16.0
margin_right = 832.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="Category" type="Label" parent="."]
margin_left = 192.0
margin_top = 39.0
margin_right = 271.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 2 )
text = "Category"

[node name="Difficulty" type="Label" parent="."]
margin_left = 192.0
margin_top = 84.0
margin_right = 264.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )
text = "Dificulty"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
window_title = "Information"
dialog_text = "You Won The Game!
100/100"
dialog_autowrap = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="opt1" to="." method="_on_opt1_pressed"]
[connection signal="pressed" from="opt2" to="." method="_on_opt2_pressed"]
[connection signal="pressed" from="opt3" to="." method="_on_opt3_pressed"]
[connection signal="pressed" from="opt4" to="." method="_on_opt4_pressed"]
